Added live test demo

--- a/Mood_recognition.ipynb
+++ b/Mood_recognition.ipynb
@@ -17,15 +17,11 @@
     "from matplotlib.pyplot import specgram\n",
     "from tensorflow.keras.preprocessing import sequence\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Embedding\n",
-    "from tensorflow.keras.layers import LSTM\n",
-    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
-    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.layers import Dense\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras.layers import Input, Flatten, Dropout, Activation\n",
     "from tensorflow.keras.layers import Conv2D, MaxPooling2D, AveragePooling1D\n",
     "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.callbacks import ModelCheckpoint\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from tensorflow.keras import regularizers\n",
     "import os\n",
@@ -1738,13 +1734,12 @@
    ],
    "source": [
     "#Label encoding the labels\n",
-    "from keras.utils import np_utils\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "lb = LabelEncoder()\n",
     "\n",
-    "y_train = np_utils.to_categorical(lb.fit_transform(y_train))\n",
-    "y_test = np_utils.to_categorical(lb.fit_transform(y_test))"
+    "y_train = to_categorical(lb.fit_transform(y_train))\n",
+    "y_test =  to_categorical(lb.fit_transform(y_test))"
    ]
   },
   {
