--- a/Mood_recognition.ipynb
+++ b/Mood_recognition.ipynb
@@ -1744,10 +1744,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
-     "is_executing": true
+     "is_executing": false
     }
    },
    "outputs": [
@@ -1755,45 +1755,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_11\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_18 (Conv2D)           (None, 216, 12, 20)       520       \n",
+      "conv2d_4 (Conv2D)            (None, 216, 12, 20)       520       \n",
       "_________________________________________________________________\n",
-      "activation_40 (Activation)   (None, 216, 12, 20)       0         \n",
+      "activation_8 (Activation)    (None, 216, 12, 20)       0         \n",
       "_________________________________________________________________\n",
-      "dropout_5 (Dropout)          (None, 216, 12, 20)       0         \n",
+      "max_pooling2d_4 (MaxPooling2 (None, 108, 6, 20)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_19 (Conv2D)           (None, 216, 12, 10)       5010      \n",
+      "dropout_6 (Dropout)          (None, 108, 6, 20)        0         \n",
       "_________________________________________________________________\n",
-      "activation_41 (Activation)   (None, 216, 12, 10)       0         \n",
+      "conv2d_5 (Conv2D)            (None, 108, 6, 10)        5010      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_12 (MaxPooling (None, 108, 6, 10)        0         \n",
+      "activation_9 (Activation)    (None, 108, 6, 10)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_6 (Dropout)          (None, 108, 6, 10)        0         \n",
+      "max_pooling2d_5 (MaxPooling2 (None, 54, 3, 10)         0         \n",
       "_________________________________________________________________\n",
-      "flatten_11 (Flatten)         (None, 6480)              0         \n",
+      "dropout_7 (Dropout)          (None, 54, 3, 10)         0         \n",
       "_________________________________________________________________\n",
-      "dense_22 (Dense)             (None, 1000)              6481000   \n",
+      "flatten_2 (Flatten)          (None, 1620)              0         \n",
       "_________________________________________________________________\n",
-      "activation_42 (Activation)   (None, 1000)              0         \n",
+      "dense_4 (Dense)              (None, 1000)              1621000   \n",
       "_________________________________________________________________\n",
-      "dropout_7 (Dropout)          (None, 1000)              0         \n",
+      "activation_10 (Activation)   (None, 1000)              0         \n",
       "_________________________________________________________________\n",
-      "dense_23 (Dense)             (None, 7)                 7007      \n",
+      "dropout_8 (Dropout)          (None, 1000)              0         \n",
       "_________________________________________________________________\n",
-      "activation_43 (Activation)   (None, 7)                 0         \n",
+      "dense_5 (Dense)              (None, 7)                 7007      \n",
+      "_________________________________________________________________\n",
+      "activation_11 (Activation)   (None, 7)                 0         \n",
       "=================================================================\n",
-      "Total params: 6,493,537\n",
-      "Trainable params: 6,493,537\n",
+      "Total params: 1,633,537\n",
+      "Trainable params: 1,633,537\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "#Initializing the model\n",
+    "#Initializing the Model\n",
     "model = Sequential()\n",
     "\n",
     "model.add(Conv2D(20, kernel_size=5, padding=\"same\", input_shape=(216, 12 ,1)))\n",
@@ -2517,18 +2519,6 @@
    "source": [
     "X_record = np.array(df_record)\n",
     "X_record.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# X_record_cnn = np.zeros((1,216,12))\n",
-    "# for i in range(216):\n",
-    "#     for j in range(12):\n",
-    "#         X_record_cnn[0][i][j] = X_record[i,j]"
    ]
   },
   {
